2006-09-13  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimpclone.c (gimp_clone_motion): don't access the
	src_pickable when cloning from a pattern. Fixes runtime warnings.

2006-09-13  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpmeasuretool.h
	* app/tools/gimppainttool.h: fixed _GET_OPTIONS() macros.

2006-09-13  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpblendtool.c (gimp_blend_tool_active_modifier_key):
	update coordinates in status bar.

2006-09-13  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/pix.c (query): changed label to not include a
	"|" which can be easily confused with a translation context.

2006-09-13  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpmeasuretool.c (gimp_measure_tool_active_modifier_key):
	update status bar and optional dialog window.

2006-09-13  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimptool.c (gimp_tool_set_active_modifier_state):
	added local "gboolean press" variables to improve readability.

2006-09-12  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/tiff.c: added a parargaph of the original
	copyright notice that was forgotten when originally pasting it.

2006-09-12  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpmeasuretool.[ch]: implement active_modifier_key()
	and give immediate feedback when Control (constrain to 15 degrees)
	is toggled. Did a s/mtool/measure/g.

2006-09-12  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimptool.c (gimp_tool_button_release): reset the
	active_modifier_state *after* invoking the tool's button_release().

	* app/tools/gimpblendtool.[ch]: implement active_modifier_key()
	and give immediate feedback when Control (constrain to 15 degrees)
	is toggled.

2006-09-12  Michael Natterer  <mitch@gimp.org>

	Added new tool API for modifier key events while the tool
	is active and implement it in the rect select and crop tools.
	Fixes bug #316156 and bug #355302.

	* app/tools/gimptool.[ch]: added GimpTool::active_modifier_key()